--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,19 @@ code {
     padding: 0 20px;
     align-items: center;
     justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 50px;
 }
 
 .footer-bar {
     box-shadow: 0 -20px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
     padding: 0 20px;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 50px;
 }
 
 .icon {
