--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ code {
 }
 
 .header-bar {
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
     padding: 0 20px;
     align-items: center;
     justify-content: space-between;
@@ -36,7 +35,6 @@ code {
 }
 
 .footer-bar {
-    box-shadow: 0 -20px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
     padding: 10px 20px;
     align-items: center;
     justify-content: space-between;
@@ -61,6 +59,25 @@ button {
     cursor: pointer;
 }
 
-button:hover{
+button:hover {
     background: #95aac5;
+}
+
+.bar-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.top-shadow {
+    box-shadow: 0 15px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
+}
+
+.bottom-shadow {
+    box-shadow: 0 -15px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
+}
+
+.bar-wrapper > * {
+    max-width: 1200px;
+    width: 100%;
+    flex: 1 0 auto;
 }
