--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
     height: 100%;
 }
 
+h1 {
+    margin: unset;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -80,4 +84,6 @@ button:hover {
     max-width: 1200px;
     width: 100%;
     flex: 1 0 auto;
+    padding: 10px 20px;
+    box-sizing: border-box;
 }
