--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,8 @@ code {
     display: flex;
     flex-direction: row;
     flex: 0 0 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .footer-bar {
@@ -76,8 +78,10 @@ button:hover {
     box-shadow: 0 15px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
 }
 
-.bottom-shadow {
+.footer-bar {
     box-shadow: 0 -15px 25px -5px rgba(0, 0, 0, .1), 0 8px 10px -6px rgba(0, 0, 0, .1);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .bar-wrapper > * {
